egonlang-core/res/examples/invalid/let_decl_typed_as_string_with_number_value_type.eg
let a: string = 123;

// out: TypeError: mismatched types: expected type `string` but received `number`